--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body{
     position: absolute;
     animation: slide-in 0.5s;
     left: 0;
+    cursor: pointer;
 }
 
 .dark-mode .toggle-btn button{
